refactor: 그 외 코드 일부 수정

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ jacocoTestReport {
 }
 
 tasks.named('test') {
+    systemProperty("spring.profiles.active", "test")
     outputs.dir snippetsDir
     useJUnitPlatform()
     finalizedBy 'jacocoTestReport'
