--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # default
 spring:
   profiles:
-    active: test
+    active: local
     group:
       prod: prod, auth, common
       local: local, auth, common
@@ -13,21 +13,11 @@ spring:
   config:
     activate:
       on-profile: common
-  jpa:
-    defer-datasource-initialization: true # hibernate가 초기화되기 전 data.sql 실행하는 것을 방지
-  #  show-sql: true
-    hibernate:
-      format_sql: true
-      ddl-auto: create-drop
+
   devtools:
     livereload:
       enabled: true
-logging:
-  level:
-    root: DEBUG
-    org:
-      springframework:
-        security: DEBUG
+
 # cors 설정
 cors:
   allowedOrigins: 'http://localhost:3000'
@@ -45,13 +35,23 @@ spring:
     activate:
       on-profile: test
   datasource:
-    url: jdbc:h2:mem:testdb # db 주소 고정
-  sql:
-    init:
-      data-locations: classpath:data-for-h2.sql # 시작할때 실행시킬 script
+    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE  # db 주소 고정
+#  sql:
+#    init:
+#      data-locations: classpath:data-for-h2.sql # 시작할때 실행시킬 script
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-
+    defer-datasource-initialization: true # hibernate가 초기화되기 전 data.sql 실행하는 것을 방지
+    #  show-sql: true
+    hibernate:
+      format_sql: true
+      ddl-auto: create-drop
+logging:
+  level:
+    root: DEBUG
+    org:
+      springframework:
+        security: DEBUG
 ---
 # local 환경
 spring:
@@ -61,6 +61,23 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
+  sql:
+    init:
+      data-locations: classpath:data-for-mysql.sql # 시작할때 실행시킬 script -> 실행이 안됨, 확인 필요
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    defer-datasource-initialization: true # hibernate가 초기화되기 전 data.sql 실행하는 것을 방지
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      format_sql: true
+      ddl-auto: update # 데이터를 쌓아두기 위해, update로 지정
+logging:
+  level:
+    root: DEBUG
+    org:
+      springframework:
+        security: DEBUG
