--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ plugins {
 
 group = 'me.study'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -73,7 +72,7 @@ tasks.named('test') {
     systemProperty("spring.profiles.active", "test")
     outputs.dir snippetsDir
     useJUnitPlatform()
-    finalizedBy 'jacocoTestReport'
+  //  finalizedBy 'jacocoTestReport'
 }
 
 tasks.named('asciidoctor') {
@@ -83,8 +82,8 @@ tasks.named('asciidoctor') {
 
 // 생성된 rest 문서를 jar 파일에 패키징한다.
 tasks.named('bootJar') {
-    dependsOn asciidoctor
-    from ("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
-    }
+//    dependsOn asciidoctor
+//    from ("${asciidoctor.outputDir}/html5") {
+//        into 'static/docs'
+//    }
 }
