--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   profiles:
     active: local
     group:
-      prod: prod, auth, common
+      prod: prod, auth, common, prod-db
       local: local, auth, common
       test: test, auth, common
 
@@ -78,6 +78,26 @@ spring:
 logging:
   level:
     root: DEBUG
+    org:
+      springframework:
+        security: DEBUG
+
+---
+# prod 환경
+spring:
+  config:
+    activate:
+      on-profile: prod
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      format_sql: true
+      ddl-auto: none
+logging:
+  level:
+#    root: DEBUG
     org:
       springframework:
         security: DEBUG
