chore: 프로파일 및 속성 관련 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # default
 spring:
   profiles:
-    active: local
+#    active: local
     group:
       prod: prod, auth, prod-db
       local: local, auth, common
