--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-    id 'org.asciidoctor.convert' version '1.5.8'
+    // Asciidoctor 플러그인 적용
+    // gradle 7.0 이상부터는 jvm 사용
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
     id 'java'
     id 'jacoco'
 }
@@ -10,6 +12,7 @@ group = 'me.study'
 version = '0.0.1-SNAPSHOT'
 
 configurations {
+    asciidoctorExtensions
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -17,10 +20,6 @@ configurations {
 
 repositories {
     mavenCentral()
-}
-
-ext {
-    set('snippetsDir', file("build/generated-snippets"))
 }
 
 dependencies {
@@ -41,7 +40,11 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
 }
 
 jacocoTestCoverageVerification {
@@ -75,15 +78,32 @@ tasks.named('test') {
   //  finalizedBy 'jacocoTestReport'
 }
 
+// static/docs 폴더 비우기
+asciidoctor.doFirst {
+    delete file('src/main/resources/static/docs')
+}
+
 tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
     dependsOn test
+    configurations 'asciidoctorExtensions' // 위에서 작성한 configuration 적용
+    inputs.dir snippetsDir
+}
+
+task copyDocument(type: Copy) {
+    dependsOn asciidoctor
+
+    from file("build/docs/asciidoc")
+    into file("src/main/resources/static/docs")
 }
 
 // 생성된 rest 문서를 jar 파일에 패키징한다.
 tasks.named('bootJar') {
-//    dependsOn asciidoctor
-//    from ("${asciidoctor.outputDir}/html5") {
-//        into 'static/docs'
-//    }
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
+
+build {
+    dependsOn copyDocument
 }
