--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,16 +35,18 @@ spring:
     activate:
       on-profile: test
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE  # db 주소 고정
+    url: jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE  # db 주소 고정
 #  sql:
 #    init:
 #      data-locations: classpath:data-for-h2.sql # 시작할때 실행시킬 script
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true # hibernate가 초기화되기 전 data.sql 실행하는 것을 방지
-    #  show-sql: true
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
-      format_sql: true
       ddl-auto: create-drop
 logging:
   level:
@@ -72,8 +74,10 @@ spring:
     defer-datasource-initialization: true # hibernate가 초기화되기 전 data.sql 실행하는 것을 방지
     generate-ddl: true
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
-      format_sql: true
       ddl-auto: update # 데이터를 쌓아두기 위해, update로 지정
 logging:
   level:
@@ -92,8 +96,10 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
-      format_sql: true
       ddl-auto: none
 logging:
   level:
